# OpenCV_Facial_Recognition

./: CMakeLists.txt  README.md
src/: face_paths.csv  main.cpp
